--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    
+
     <title>React App</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root"></div>
+<div style="height: 100vh;" id="root"></div>
 </body>
 </html>
